2014-06-02  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (with-tramp-progress-reporter, tramp-call-process):
	Add traces.

2014-06-02  Wilson Snyder  <wsnyder@wsnyder.org>

	Sync with upstream verilog-mode revision 3cd8144.
	* progmodes/verilog-mode.el (verilog-mode-version): Bump.
	(verilog-auto-arg-format): New option, to support newlines in AUTOARG.
	(verilog-type-font-keywords): Add nor.
	(verilog-batch-execute-func): Force reading of Local Variables.
	Fix printing "no changes to be saved" with verilog-batch.
	(verilog-auto-arg-ports): Doc fix.
	Add verilog-auto-arg-format to support newlines in AUTOARG.
	(verilog-auto-arg): Doc fix.

2014-06-02  Glenn Morris  <rgm@gnu.org>

	* emulation/crisp.el, emulation/tpu-edt.el, emulation/tpu-extras.el:
	* emulation/tpu-mapper.el, emulation/vi.el, emulation/vip.el:
	* emulation/ws-mode.el: Move to obsolete/.
	* Makefile.in (AUTOGEN_VCS): Update for moved tpu-edu.el.

2014-06-02  Eli Zaretskii  <eliz@gnu.org>

	* simple.el (keyboard-quit): Force update of mode lines, to remove
	the "Def" indicator, if we were defining a macro.  (Bug#17615)

2014-06-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (minibuffer-force-complete-and-exit):
	Obey minibuffer-default (bug#17545).

	* progmodes/js.el (js-indent-line): Don't mix columns and chars
	(bug#17619).

	* subr.el (set-transient-map): Don't wait for some "nested"
	transient-map to finish if we're only supposed to be active for
	the next command (bug#17642).

2014-06-02  Leo Liu  <sdl.web@gmail.com>

	* emacs-lisp/gv.el (window-buffer, window-display-table)
	(window-dedicated-p, window-hscroll, window-point, window-start):
	Fix gv-expander.  (Bug#17630)

2014-06-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mouse.el (mouse-posn-property): Ignore posn-point for mode-line
	clicks (bug#17633).

	* leim/quail/latin-pre.el ("latin-2-prefix"): Use ",," rather than ", "
	for the single comma, since ", " is *very* common in normal French text